Bug 317058 - KGet: History backend for Nepomuk not working - KGET 2.10.1
Summary: KGet: History backend for Nepomuk not working - KGET 2.10.1
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: Core (other bugs)
Version First Reported In: 2.10.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: David E. Narvaez
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-20 02:51 UTC by Gerald Cox
Modified: 2013-04-10 22:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Cox 2013-03-20 02:51:37 UTC
I selected Nepomuk as the backend, however when I select view history nothing appears.  If I select SQLite as the backend it appears to work fine.

Reproducible: Always

Steps to Reproduce:
1.  Download files
2.  Check view history

Actual Results:  
History is blank

Expected Results:  
History populated with downloads

Running KGet 2.10.1 
KDE 4.10.1
Comment 1 David E. Narvaez 2013-03-20 04:22:56 UTC
Well, 2 days ago I would have confirmed this bug right away. Yet, after getting the latest version of the 4.10 code to build and install it to start working precisely on this issue, the issue seems solved. Not completely solved, because not all of my downloads are listed, but some are listed at least.

I'll keep looking: maybe the reason why some are listed and some are not is the same reason why none are listed in most installations.
Comment 2 David E. Narvaez 2013-03-20 13:11:05 UTC
Sorry, I had it wrong: my backed had switched to SQLite. Indeed the Nepomuk History is not working.
Comment 3 David E. Narvaez 2013-03-21 05:35:57 UTC
SVN commit 1345385 by narvaez:

Adding kget_history.ontology file and installing both the trig file
and the ontology



 M  +4 -0      CMakeLists.txt  
 A             kget_history.ontology.in  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1345385
Comment 4 David E. Narvaez 2013-03-21 05:45:22 UTC
SVN commit 1345386 by narvaez:

Fixing code to store and query a HistoryItem in Nepomuk



 M  +10 -1     transferhistorystore.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1345386
Comment 5 Gerald Cox 2013-04-10 14:53:13 UTC
David, I just tested on Fedora and noticed the following:
If you use sqlite, history appears in both the current view and the history view.  You can then choose to remove completed downloads from the current view, and they of course stay in history.  

If you use nepomuk you only see the downloaded files in one, either the current or the history.  When you clear the completed files from the current view, they then show in history - not before.

This is different behaviour then what was occurring when using sqlite.  I don't have a problem with it, and think it is equally valid behaviour, just wanted to make sure that is what you had intended.  

Other than that, seems to work fine.  Thanks!
Comment 6 David E. Narvaez 2013-04-10 22:11:17 UTC
(In reply to comment #5)
> This is different behaviour then what was occurring when using sqlite.  I
> don't have a problem with it, and think it is equally valid behaviour, just
> wanted to make sure that is what you had intended.  

I can confirm the Nepomuk behavior and haven't tested the SQLite one. The Nepomuk behavior was there when I started working on the fix, but I'll take a look again and see why is it different.

On a side note, I did notice that after the fix, I once tried checking my history and it was gone (no items were displayed in the history view). I then quit KGet and started it again, checked the history and it was back. This had something to do with query results  so can be related to a bug from Nepomuk. As we move to Nepomuk2, this should be fixed but for the moment (4.10) the workaround of quitting and restarting the app is the way to go.