Fixing code to store and query a HistoryItem in Nepomuk

BUG: 317058

svn path=/branches/KDE/4.10/kdenetwork/kget/; revision=1345386